Adds golden infobox

--- a/css/style.css
+++ b/css/style.css
@@ -68,13 +68,20 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 @import url(http://fonts.googleapis.com/css?family=News+Cycle);
-/* line 15, ../scss/style.scss */
+/* line 20, ../scss/style.scss */
+body {
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 15px;
+  color: #333333;
+}
+
+/* line 26, ../scss/style.scss */
 a {
   color: #000;
   text-decoration: none;
 }
 
-/* line 17, ../scss/style.scss */
+/* line 28, ../scss/style.scss */
 h1 {
   font-family: 'News Cycle', sans-serif;
   color: #0c5fb2;
@@ -83,29 +90,59 @@ h1 {
   text-transform: lowercase;
 }
 
-/* line 25, ../scss/style.scss */
+/* line 36, ../scss/style.scss */
+h2, h3, h4, h5 {
+  font-family: "Helvetica Neue", sans-serif;
+}
+
+/* line 38, ../scss/style.scss */
+h2 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+/* line 39, ../scss/style.scss */
+h3 {
+  font-size: 11px;
+  font-weight: bold;
+}
+
+/* line 40, ../scss/style.scss */
+h4 {
+  font-size: 11px;
+  font-weight: bold;
+}
+
+/* line 42, ../scss/style.scss */
+.content {
+  width: 980px;
+  margin: auto;
+}
+
+/* Navigation */
+/* line 45, ../scss/style.scss */
 nav {
   height: 80px;
   background: url(../img/backgrounds/bkg_navigation.png) repeat-x;
 }
-/* line 29, ../scss/style.scss */
+/* line 49, ../scss/style.scss */
 nav h1 {
   position: relative;
   top: 10px;
   float: left;
 }
-/* line 31, ../scss/style.scss */
+/* line 51, ../scss/style.scss */
 nav ul {
   position: relative;
   top: 30px;
   float: right;
 }
-/* line 36, ../scss/style.scss */
+/* line 56, ../scss/style.scss */
 nav ul li {
   display: inline;
   margin-left: 26px;
 }
-/* line 40, ../scss/style.scss */
+/* line 60, ../scss/style.scss */
 nav ul li a {
   font-size: 19px;
   color: #000000;
@@ -113,8 +150,74 @@ nav ul li a {
   font-family: 'News Cycle', sans-serif;
 }
 
-/* line 50, ../scss/style.scss */
-.content {
-  width: 980px;
-  margin: auto;
+/* line 64, ../scss/style.scss */
+.map {
+  padding: 50px;
+}
+
+/* line 69, ../scss/style.scss */
+.box {
+  position: relative;
+  width: 304px;
+}
+/* line 75, ../scss/style.scss */
+.box .header {
+  background: url(../img/backgrounds/bkg_box_top_gold.png) repeat-y;
+  position: absolute;
+  width: 100%;
+  height: 49px;
+  top: -119px;
+  padding: 35px;
+}
+/* line 83, ../scss/style.scss */
+.box .header hgroup {
+  width: 220px;
+  text-shadow: 1px 1px 1px #ffcc00;
+}
+/* line 86, ../scss/style.scss */
+.box .header hgroup h2 {
+  color: #fff;
+  text-shadow: 1px 1px 1px #845412;
+}
+/* line 87, ../scss/style.scss */
+.box .header hgroup h3 {
+  margin: 0 0 8px 0;
+  color: #9a6100;
+  opacity: .6;
+  text-transform: uppercase;
+}
+/* line 91, ../scss/style.scss */
+.box .content {
+  padding: 29px 43px 5px 43px;
+  background: url(../img/backgrounds/bkg_boxes.png) repeat-y -308px top;
+}
+/* line 92, ../scss/style.scss */
+.box .content h4 {
+  margin: 0 0 10px 0;
+  text-transform: uppercase;
+  color: #bbbbbb;
+}
+/* line 99, ../scss/style.scss */
+.box .content ul {
+  list-style: square;
+  margin: 0 0 29px 0;
+}
+/* line 102, ../scss/style.scss */
+.box .content ul li {
+  color: #333333;
+  font-size: 15px;
+  margin: 0 0 15px 0;
+}
+/* line 106, ../scss/style.scss */
+.box .content ul li a {
+  border-bottom: 1px dotted #4C4C4C;
+}
+/* line 111, ../scss/style.scss */
+.box .b {
+  width: 100%;
+  background: url(../img/backgrounds/bkg_boxes.png) no-repeat left bottom;
+  height: 13px;
+  position: absolute;
+  left: 0;
+  bottom: -13px;
 }
