--- a/css/style.css
+++ b/css/style.css
@@ -204,36 +204,10 @@ nav ul li a {
 /* line 104, ../scss/style.scss */
 .box .content {
   width: 218px;
-  padding: 29px 43px 5px 43px;
+  padding: 29px 43px 24px 43px;
   background: url(../img/backgrounds/bkg_boxes.png) repeat-y -944px top;
 }
-/* line 110, ../scss/style.scss */
-.box .content h4 {
-  margin: 0 0 5px 0;
-  text-transform: uppercase;
-  color: #bbbbbb;
-}
-/* line 112, ../scss/style.scss */
-.box .content ul {
-  list-style: square;
-  margin: 0 0 29px 0;
-}
-/* line 116, ../scss/style.scss */
-.box .content ul:last-child {
-  margin: 0;
-}
-/* line 118, ../scss/style.scss */
-.box .content ul li {
-  margin: 0 0 7px 0;
-  color: #333333;
-  font-size: 15px;
-  line-height: 22px;
-}
-/* line 124, ../scss/style.scss */
-.box .content ul li a {
-  border-bottom: 1px dotted #4C4C4C;
-}
-/* line 128, ../scss/style.scss */
+/* line 111, ../scss/style.scss */
 .box .footer {
   width: 100%;
   background: url(../img/backgrounds/bkg_boxes.png) no-repeat -631px bottom;
@@ -243,96 +217,137 @@ nav ul li a {
   bottom: -13px;
 }
 
-/* Golden box */
+/* line 117, ../scss/style.scss */
+.box .content a {
+  font-size: 11px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+/* line 119, ../scss/style.scss */
+.box .content h4 {
+  margin: 0 0 5px 0;
+  text-transform: uppercase;
+  color: #bbbbbb;
+}
+/* line 121, ../scss/style.scss */
+.box .content ul {
+  list-style: square;
+  margin: 0 0 29px 0;
+}
+/* line 125, ../scss/style.scss */
+.box .content ul:last-child {
+  margin: 0;
+}
+/* line 127, ../scss/style.scss */
+.box .content ul li {
+  margin: 0 0 7px 0;
+  color: #333333;
+  font-size: 15px;
+  line-height: 22px;
+}
 /* line 133, ../scss/style.scss */
+.box .content ul li a {
+  font-size: 15px;
+  color: #333333;
+  text-transform: none;
+  font-weight: normal;
+  border-bottom: 1px dotted #4C4C4C;
+}
+/* line 139, ../scss/style.scss */
+.box.blue .content a {
+  color: #1872a0;
+}
+
+/* Golden box */
+/* line 144, ../scss/style.scss */
 .box.golden .header {
   background: url(../img/backgrounds/bkg_box_top_gold.png) repeat-y;
 }
-/* line 135, ../scss/style.scss */
+/* line 146, ../scss/style.scss */
 .box.golden .header hgroup {
   text-shadow: 1px 1px 1px #ffcc00;
 }
-/* line 137, ../scss/style.scss */
+/* line 148, ../scss/style.scss */
 .box.golden .header hgroup h2 {
   color: #fff;
   text-shadow: 1px 1px 1px #845412;
 }
-/* line 138, ../scss/style.scss */
+/* line 149, ../scss/style.scss */
 .box.golden .header hgroup h3 {
   color: #9a6100;
 }
-/* line 141, ../scss/style.scss */
+/* line 152, ../scss/style.scss */
 .box.golden .content {
   background-position: -944px top;
 }
-/* line 142, ../scss/style.scss */
+/* line 153, ../scss/style.scss */
 .box.golden .footer {
   background-position: -631px bottom;
 }
 
 /* Green box */
-/* line 147, ../scss/style.scss */
+/* line 158, ../scss/style.scss */
 .box.green .header {
   background: url(../img/backgrounds/bkg_box_top_green.png) repeat-y;
 }
-/* line 151, ../scss/style.scss */
+/* line 162, ../scss/style.scss */
 .box.green .header hgroup h2 {
   color: #fff;
   text-shadow: 1px 1px 1px #52642a;
 }
-/* line 152, ../scss/style.scss */
+/* line 163, ../scss/style.scss */
 .box.green .header hgroup h3 {
   text-shadow: 1px 1px 1px #b2e053;
   color: #5f7232;
 }
-/* line 155, ../scss/style.scss */
+/* line 166, ../scss/style.scss */
 .box.green .content {
   background-position: -308px top;
 }
-/* line 156, ../scss/style.scss */
+/* line 167, ../scss/style.scss */
 .box.green .footer {
   background-position: left bottom;
 }
 
 /* Blue box */
-/* line 162, ../scss/style.scss */
+/* line 173, ../scss/style.scss */
 .box.blue .header {
   background: url(../img/backgrounds/bkg_box_top_blue.png) repeat-y;
 }
-/* line 166, ../scss/style.scss */
+/* line 177, ../scss/style.scss */
 .box.blue .header hgroup h2 {
   color: #fff;
   text-shadow: 1px 1px 1px #0f445e;
 }
-/* line 167, ../scss/style.scss */
+/* line 178, ../scss/style.scss */
 .box.blue .header hgroup h3 {
   text-shadow: 1px 1px 1px #1b93cf;
   color: #104c6b;
 }
-/* line 170, ../scss/style.scss */
+/* line 181, ../scss/style.scss */
 .box.blue .content {
   background-position: -1566px top;
 }
-/* line 171, ../scss/style.scss */
+/* line 182, ../scss/style.scss */
 .box.blue .footer {
   background-position: -1259px bottom;
 }
 
-/* line 174, ../scss/style.scss */
+/* line 185, ../scss/style.scss */
 .box.golden {
   position: absolute;
   top: 300px;
   left: 100px;
 }
 
-/* line 175, ../scss/style.scss */
+/* line 186, ../scss/style.scss */
 .box.green {
   position: absolute;
   top: 300px;
   left: 500px;
 }
 
-/* line 176, ../scss/style.scss */
+/* line 187, ../scss/style.scss */
 .box.blue {
   position: absolute;
   top: 300px;
